# oh-llm

./: .gitignore  AGENTS.md  PRD.md  README.md  prd.md  pyproject.toml
.beads/: .gitignore  issues.jsonl
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: agent-sdk-execution.md  manual-qa-tmux.md  profiles.md  runs.md  secrets.md  testing.md  troubleshooting.md
docs/providers/: README.md  anthropic.md  azure-openai.md  deepinfra.md  deepseek.md  fireworks.md  gemini.md  groq.md  mistral.md  ollama.md  openai.md  openrouter.md  perplexity.md  together.md  xai.md
scripts/: openai_sdk_smoke.py  provider_smoke.py
src/oh_llm/: agent_sdk.py  autofix_capsule.py  autofix_openhands.py  autofix_pr.py  autofix_validation.py  cli.py  failures.py  profiles.py  prompts.py  runs.py  (+5 more)
tests/: test_agent_sdk_git.py  test_autofix_agent.py  test_autofix_capsule.py  test_autofix_dry_run_e2e.py  test_autofix_gating.py  test_autofix_pr.py  test_autofix_top_level.py  test_autofix_validate.py  test_autofix_worktree.py  test_cli_help.py  test_cli_smoke_e2e.py  test_failures.py  test_import.py  test_json_contract.py  test_json_stdout_redaction.py  test_mock_mode.py  test_openai_sdk_smoke_script.py  test_profiles.py  test_profiles_e2e.py  test_profiles_edit_delete.py  test_profiles_integration_agent_sdk.py  test_prompts.py  test_provider_smoke_script.py  test_redaction.py  test_run_store.py  test_runs_cli.py  test_runs_cli_e2e.py  test_runs_export.py  test_sdk_status_cli.py  test_secret_canary_e2e.py  test_stage_a_cli.py  test_stage_b_cli.py  test_stage_b_contract.py
(+2 files in other folders)
